Bug 256787 - Kmymoney crashed at import of new transactions
Summary: Kmymoney crashed at import of new transactions
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-13 12:36 UTC by titzke
Modified: 2010-12-12 15:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description titzke 2010-11-13 12:36:58 UTC
Application: kmymoney (4.5.0)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-23-generic x86_64
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:

I received updates from my online account. While merging the planned transactions I got the message "Problem adding or matching transaction with id '...'. Cannot remove transaction that references a closed account.'. When I click 'cancel' none of my transactions are updated, when I click 'continue' Kmymoney segfaults.

I found the offending account and can avoid the segfault either by reactivating the account or removing the planned transaction.

The crash can be reproduced every time.

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f10f741f760 (LWP 4222))]

Thread 2 (Thread 0x7f10e78aa710 (LWP 4223)):
#0  0x00007f10f1deb1d3 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f10ecf46009 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f10ecf467b5 in g_main_loop_run () from /lib/libglib-2.0.so.0
#3  0x00007f10e7fe10f4 in ?? () from /usr/lib/libgio-2.0.so.0
#4  0x00007f10ecf6b7e4 in ?? () from /lib/libglib-2.0.so.0
#5  0x00007f10f4a47971 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#6  0x00007f10f1df791d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f10f741f760 (LWP 4222)):
[KCrash Handler]
#6  0x00007f10f25e5146 in __dynamic_cast () from /usr/lib/libstdc++.so.6
#7  0x0000000000702de0 in TransactionEditor::setupPrecision (this=0x26b9000) at /build/buildd/kmymoney-4.5/kmymoney/dialogs/transactioneditor.cpp:115
#8  0x000000000070e658 in TransactionEditor::qt_metacall (this=0x26b9000, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff6301a6f0) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/dialogs/transactioneditor.moc:129
#9  0x0000000000718875 in StdTransactionEditor::qt_metacall (this=0x0, _c=QMetaObject::InvokeMetaMethod, _id=1661052240, _a=0xc1a450) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/dialogs/transactioneditor.moc:299
#10 0x00007f10f2c2eb27 in QMetaObject::activate (sender=0x7f10f724e940, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xc1a450) at kernel/qobject.cpp:3280
#11 0x00007f10f6fe88a5 in MyMoneyFileTransaction::commit (this=0x2e10430) at /build/buildd/kmymoney-4.5/kmymoney/mymoney/mymoneyfile.cpp:2408
#12 0x00000000007d5287 in MyMoneyStatementReader::import (this=0x2e549a0, s=<value optimized out>, messages=<value optimized out>) at /build/buildd/kmymoney-4.5/kmymoney/converter/mymoneystatementreader.cpp:412
#13 0x000000000047afbd in KMyMoneyApp::slotStatementImport (this=0x10bbed0, s=...) at /build/buildd/kmymoney-4.5/kmymoney/kmymoney.cpp:2300
#14 0x00007f10d3a53a72 in KMyMoneyBanking::importAccountInfo (this=0x1746bc0, ai=0x2e1d1c0) at /build/buildd/kmymoney-4.5/kmymoney/plugins/kbanking/mymoneybanking.cpp:973
#15 0x00007f10d326b631 in QBanking::importContext(AB_IMEXPORTER_CONTEXT*, unsigned int) () from /usr/lib/libq4banking.so.1
#16 0x00007f10d3a4fcce in KBankingPlugin::updateAccount (this=0x1746c40, acc=<value optimized out>, moreAccounts=<value optimized out>) at /build/buildd/kmymoney-4.5/kmymoney/plugins/kbanking/mymoneybanking.cpp:605
#17 0x0000000000461c83 in KMyMoneyApp::slotAccountUpdateOnline (this=0x10bbed0) at /build/buildd/kmymoney-4.5/kmymoney/kmymoney.cpp:6891
#18 0x000000000049e69d in KMyMoneyApp::qt_metacall (this=0x10bbed0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff6301be30) at /build/buildd/kmymoney-4.5/obj-x86_64-linux-gnu/kmymoney/kmymoney.moc:505
#19 0x00007f10f2c2eb27 in QMetaObject::activate (sender=0x1120770, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0xc1a450) at kernel/qobject.cpp:3280
#20 0x00007f10f35c5852 in QAction::triggered (this=0x0, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#21 0x00007f10f35c6f5b in QAction::activate (this=0x1120770, event=<value optimized out>) at kernel/qaction.cpp:1256
#22 0x00007f10f3a2ddc1 in QMenuPrivate::activateCausedStack (this=<value optimized out>, causedStack=..., action=0x1120770, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#23 0x00007f10f3a33782 in QMenuPrivate::activateAction (this=0x11728c0, action=0x1120770, action_e=QAction::Trigger, self=<value optimized out>) at widgets/qmenu.cpp:1085
#24 0x00007f10f5b2bcee in KMenu::mouseReleaseEvent (this=0x1172880, e=0x0) at ../../kdeui/widgets/kmenu.cpp:471
#25 0x00007f10f362304e in QWidget::event (this=0x1172880, event=0x7fff6301ca80) at kernel/qwidget.cpp:8187
#26 0x00007f10f3a3590b in QMenu::event (this=0x1172880, e=0x7fff6301ca80) at widgets/qmenu.cpp:2410
#27 0x00007f10f35ccfdc in QApplicationPrivate::notify_helper (this=0xe20b60, receiver=0x1172880, e=0x7fff6301ca80) at kernel/qapplication.cpp:4396
#28 0x00007f10f35d330e in QApplication::notify (this=0xe20a90, receiver=0x1172880, e=0x7fff6301ca80) at kernel/qapplication.cpp:3959
#29 0x00007f10f5a4b156 in KApplication::notify (this=0xe20a90, receiver=0x1172880, event=0x7fff6301ca80) at ../../kdeui/kernel/kapplication.cpp:310
#30 0x00007f10f2c16cdc in QCoreApplication::notifyInternal (this=0xe20a90, receiver=0x1172880, event=0x7fff6301ca80) at kernel/qcoreapplication.cpp:732
#31 0x00007f10f35d1dbe in sendEvent (receiver=0x1172880, event=0x7fff6301ca80, alienWidget=0x0, nativeWidget=0x1172880, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#32 QApplicationPrivate::sendMouseEvent (receiver=0x1172880, event=0x7fff6301ca80, alienWidget=0x0, nativeWidget=0x1172880, buttonDown=<value optimized out>, lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:3058
#33 0x00007f10f36557bd in QETWidget::translateMouseEvent (this=0x1172880, event=<value optimized out>) at kernel/qapplication_x11.cpp:4337
#34 0x00007f10f3653c5c in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff6301d3a0) at kernel/qapplication_x11.cpp:3536
#35 0x00007f10f36800e2 in x11EventSourceDispatch (s=0xe24a50, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#36 0x00007f10ecf42342 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#37 0x00007f10ecf462a8 in ?? () from /lib/libglib-2.0.so.0
#38 0x00007f10ecf4645c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#39 0x00007f10f2c43193 in QEventDispatcherGlib::processEvents (this=0xe20af0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#40 0x00007f10f367fa4e in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#41 0x00007f10f2c15a02 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#42 0x00007f10f2c15dec in QEventLoop::exec (this=0x7fff6301d6d0, flags=) at kernel/qeventloop.cpp:201
#43 0x00007f10f2c19ebb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#44 0x0000000000452d58 in main (argc=<value optimized out>, argv=<value optimized out>) at /build/buildd/kmymoney-4.5/kmymoney/main.cpp:260

Reported using DrKonqi
Comment 1 Thomas Baumgart 2010-12-12 15:01:34 UTC
SVN commit 1205777 by tbaumgart:

Delete transaction editor upon an exception

BUG: 256787 

 M  +6 -2      mymoneystatementreader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205777
Comment 2 Thomas Baumgart 2010-12-12 15:02:09 UTC
SVN commit 1205778 by tbaumgart:

Delete transaction editor upon an exception

Backported to stable branch

BUG: 256787 

 M  +6 -2      mymoneystatementreader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205778