Delete transaction editor upon an exception

Backported to stable branch

BUG: 256787 

svn path=/branches/kmymoney/4.5/; revision=1205778